fixed flexbox spacing in sidebar

--- a/web/style.css
+++ b/web/style.css
@@ -94,6 +94,8 @@ div.corpus {
     overflow-y: scroll;
     height: 600px;
     width: 800px;
+    padding-right: 5px;
+    padding-left: 5px;
 
 
 }
@@ -110,8 +112,7 @@ div.open {
     overflow-y: scroll;
     height: 600px;
     width: 800px;
-
-
+    
 }
 div.closed {
     height: 98vh;
@@ -123,30 +124,34 @@ div.closed {
 }
 
 div.text {
-    height: 98vh;
     height: 300px;
+    overflow-y: scroll;
     width: 400px;
     padding: 10px;
 
 }
 .texts-filtering-box {
-    height: 100px;
-    width: 200px;
-    padding-top: 50px;
+    height: 150px;
+    width: 150px;
+    order:1;
+    padding: 10px;
+    padding-bottom: 10px;
 
 }
 .texts-filtering-container {
-    height: 200px;
-    width: 200px;
-
-
+    height: 150px;
+    width: 150px;
+    order:2;
+    padding: 10px;
+    padding-bottom: 10px;
 }
 
 .attribute-filtering-box {
-    height: 98vh;
+    
     overflow-y: scroll;
-    height: 200px;
+    height: 150px;
     width: 200px;
+    padding: 10px;
     
 }
 
@@ -175,7 +180,7 @@ div.text {
     flex-basis: auto;
     align-self: auto;
     order: 0;
-    
+    padding-right: 10px;
 
 
 
